# filebrowser

./: .gitignore  DESIGN.md  DEV_GUIDE.md  PLAN.md  README.md  pyproject.toml
deploy/: Caddyfile.http.template  Caddyfile.template  filebrowser.caddy.http.template  filebrowser.caddy.template  filebrowser.service  install.sh  tailscale-cert-renew.service  tailscale-cert-renew.timer  update.sh
docs/: architecture.dot  auth-and-tls.dot  debugging.md  file-handling.dot  preview-system.dot
docs/plans/: 2026-03-27-terminal-here-implementation.md  2026-03-27-terminal-websocket-auth.md  2026-03-29-tabbed-file-views-design.md  2026-03-29-tabbed-file-views-implementation.md
filebrowser/: __main__.py  auth.py  cli.py  config.py  main.py  service.py
filebrowser/routes/: auth.py  files.py  locations.py  terminal.py
filebrowser/services/: filesystem.py  locations.py
filebrowser/static/: index.html
fixtures/: README.md  tmux-cheatsheet.md
fixtures/code/: Main.java  app.js  deploy.sh  hello.py  lib.rs  main.cpp  (+4 more)
scripts/: render-brand-assets.py
tests/: BROWSER_TESTING.md  conftest.py  test_action_bar_terminal_toggle.py  test_auth.py  test_cli.py  test_config.py  test_context_menu.py  test_file_change_detection.py  test_files.py  test_filesystem.py  test_graphviz_dot_preprocess.py  test_image_viewer.py  test_index_html.py  test_layout_integration.py  test_locations.py  test_markdown_preprocess.py  test_preview_security.py  test_service.py  test_tab_bar.py  test_terminal.py  test_terminal_component.py  test_terminal_css.py  test_terminal_router.py  test_use_tab_manager.py
(+50 files in other folders)
