[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filebrowser"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-pam",
    "python-multipart",
    "itsdangerous",
    "six",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[project.scripts]
filebrowser = "filebrowser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["filebrowser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
